2011-09-29  Andreas Kupries  <andreask@activestate.com>

	* generic/hwloc.c: [Issue 3]: Changed the -set_xxx options of
	* tests/create.test: [hwloc create] to -xxx. Updated the test
	* tests/topology.test: suite and documentation as well.
	* tests/topology_convert.test:
	* tests/topology_cpu_node_set.test:
	* doc/class.inc:
	* doc/instance.inc:

2011-09-29  Andreas Kupries  <andreask@activestate.com>

	* Makefile.in: [Issue 12] Updated target 'dist' to place
	  'tclhwloc.m4' into the distribution, and copy the tarball into
	  the current working directory.

2011-09-22  Andreas Kupries  <andreask@activestate.com>

	* tclhwloc.m4: Accepted and applied patch by Jeff Squyres
	  <jsquyres@cisco.com> which tweaks the checks, data, and messages
	  a bit.
	* configure: Regenerated (autoconf 2.67).

2011-09-21  Andreas Kupries  <andreask@activestate.com>

	* configure.in: Dropped hwloc minimum requirement to 1.2.
	* configure: Regenerated (autoconf 2.67).

	* configure.in: [Issue 9, 10]: Reworked the code determining the
	  hwloc flags to accept a --with-hwloc switch for custom location,
	  also using directories derived from (exec-)prefix as
	  defaults. Further extended with a check for existence and check
	  of minimum required version before accepting it and attempting
	  to get the libs and c-flags.

	* tclhwloc.m4: New file, contains the m4 helper macro actually
	  implementing all of the above.
	* aclocal.m4: Added tclhwloc.m4 to sourced files.

	* configure: Regenerated (autoconf 2.57).

	* README: [Issue 11] Updated contents to properly contain the
	  tcl-hwloc location, build instructions, etc. Removed all
	  references to the sampleextension.
	* README.hwloc: Removed file. Folded into the README.
	* license.terms: Formatted to use shorter line lengths.

2011-09-20  Andreas Kupries  <andreask@activestate.com>

	* doc/instance.inc: Completed the documentation of cpubind and
	  membind. Together with the test suite we are now pretty much